--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<li><a href="./paginasejercicio2/pagina2.html"></a></li>
 
 </body>
 </html>
