--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 
 <li><a href="./paginasejercicio2/pagina2.html"></a></li>
+<li><a href="./paginasejercicio2/pagina3.html"></a></li>
 
 </body>
 </html>
