--- a/paginasejercicio2/pagina3.html
+++ b/paginasejercicio2/pagina3.html
@@ -7,7 +7,14 @@
 
 <h1>Tabla con  datos de asignaturas</h1>
 
-
+<table>
+    <tr>
+        <th>Nº Mòdul</th>
+        <th>Nom</th>
+        <th>Nº UFs</th>
+        <th>Descripció</th>    
+    </tr>
+</table>
 
 </body>
 </html>
