--- a/paginasejercicio2/pagina3.html
+++ b/paginasejercicio2/pagina3.html
@@ -14,6 +14,11 @@
         <th>Nº UFs</th>
         <th>Descripció</th>    
     </tr>
+    <tr>
+      <td>Inglés</td>
+      <td> 5 RA</td>
+      <td>Aprender ingles tecnico sobre programcion</td>
+    </tr>
 </table>
 
 </body>
