--- a/paginasejercicio2/pagina3.html
+++ b/paginasejercicio2/pagina3.html
@@ -7,19 +7,53 @@
 
 <h1>Tabla con  datos de asignaturas</h1>
 
-<table>
-    <tr>
-        <th>Nº Mòdul</th>
-        <th>Nom</th>
-        <th>Nº UFs</th>
-        <th>Descripció</th>    
-    </tr>
-    <tr>
-      <td>Inglés</td>
-      <td> 5 RA</td>
-      <td>Aprender ingles tecnico sobre programcion</td>
-    </tr>
-</table>
+<table border="1">
+    <thead>
+      <tr>
+        <th>Nombre del Módulo</th>
+        <th>Nº RA</th>
+        <th>Descripción</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Inglés</td>
+        <td>5RA</td>
+        <td>Estudio del idioma inglés con enfoque en la comunicación oral y escrita.</td>
+      </tr>
+      <tr>
+        <td>Programación</td>
+        <td>9RA</td>
+        <td>Desarrollo de habilidades en la programación estructurada con énfasis en lenguajes como C o Java.</td>
+      </tr>
+      <tr>
+        <td>Bases de Datos</td>
+        <td>7RA</td>
+        <td>Diseño y gestión de bases de datos relacionales utilizando SQL y otras herramientas.</td>
+      </tr>
+      <tr>
+        <td>IPO1 (Fol)</td>
+        <td>6RA</td>
+        <td>familiarizarse con las condiciones de trabajo que se va a encontrar a lo largo de su vida profesional</td>
+      </tr>
+      <tr>
+        <td>Web y Digitalización</td>
+        <td>6RA</td>
+        <td>Desarrollo de aplicaciones web y digitalización de procesos empresariales.</td>
+      </tr>
+      <tr>
+        <td>Sistemas</td>
+        <td>7RA</td>
+        <td>Instalación, configuración y administración de sistemas operativos y redes.</td>
+      </tr>
+      <tr>
+        <td>Tutoría DAW 1</td>
+        <td>0RA</td>
+        <td>Sesiones de orientación y seguimiento académico para el curso de Desarrollo de Aplicaciones Web.</td>
+      </tr>
+    </tbody>
+  </table>
+  
 
 </body>
 </html>
