--- a/paginasejercicio2/pagina3.html
+++ b/paginasejercicio2/pagina3.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <li><a href="../index.html"></a></li>
+    <li><a href="../index.html" target="_blank">inicio</a></li>
 <h1>Tabla con  datos de asignaturas</h1>
 
 <table border="1">
