--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<li><a href="./paginasejercicio2/pagina2.html"></a></li>
-<li><a href="./paginasejercicio2/pagina3.html"></a></li>
+<li><a href="./paginasejercicio2/pagina2.html" target="_blank"> pagina2</a></li>
+<li><a href="./paginasejercicio2/pagina3.html" target="_blank"> pagina3</a></li>
 
 </body>
 </html>
